# tokenization_unification

./: .gitignore  LICENSE  README.md  pyproject.toml
results/: master.parquet
results/tables/: compute.csv  compute.md  main.csv  main.md  rq3_rule.csv  rq3_rule.md  stats.csv  stats.md  utility.csv  utility.md
runs/ETTh1_h336_discrete_bpe_seed2021/: config.yaml  env.json  metrics.json
runs/ETTh1_h336_discrete_bpe_seed2022/: config.yaml  env.json  metrics.json
runs/ETTh1_h336_discrete_bpe_seed2023/: config.yaml  env.json  metrics.json
runs/ETTh1_h336_discrete_scalar_seed2021/: config.yaml  env.json  metrics.json
runs/ETTh1_h336_discrete_scalar_seed2022/: config.yaml  env.json  metrics.json
runs/ETTh1_h336_discrete_scalar_seed2023/: config.yaml  env.json  metrics.json
runs/ETTh1_h336_patch_seed2021/: config.yaml  env.json  metrics.json
runs/ETTh1_h336_patch_seed2022/: config.yaml  env.json  metrics.json
runs/ETTh1_h336_patch_seed2023/: config.yaml  env.json  metrics.json
runs/ETTh1_h336_point_seed2021/: config.yaml  env.json  metrics.json
runs/ETTh1_h336_point_seed2022/: config.yaml  env.json  (+1 more)
tests/: test_analysis.py  test_backbone.py  test_batch.py  test_cli.py  test_config.py  test_data_base.py  test_data_electricity.py  test_data_ett.py  test_data_weather.py  test_manifest_generation.py  test_model_wrapper.py  test_registry.py  test_runner.py  test_smoke.py  test_tokenizer_base.py  test_tokenizer_discrete_bpe.py  test_tokenizer_discrete_scalar.py  test_tokenizer_patch.py  test_tokenizer_point.py  test_tokenizer_variate.py  test_training.py
(+264 files in other folders)
