[project]
name = "tokenstudy"
version = "0.1.0"
description = "Tokenization Unification study for time-series forecasting"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.4.0",
    "numpy>=1.26",
    "polars>=1.0",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "scipy>=1.13",
    "matplotlib>=3.8",
    "scikit-learn>=1.5",
    "numba>=0.60",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tokenstudy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"

[tool.ruff]
line-length = 110
target-version = "py311"
